--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ io.ktor.samples.sandbox.KtorConfigurationKt.module ]
+        modules = [ io.ktor.samples.sandbox.KtorConfigurationKt.webConfig, io.ktor.samples.sandbox.KtorConfigurationKt.routes ]
     }
     custom = "olololo"
 }
